<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp" />
    <item
        android:id="@+id/action_SOS"
        android:title="@string/sos"
        android:icon="@drawable/ic_add_alert_black_24dp" />
    <item
        android:id="@+id/action_livechat"
        android:title="@string/livechat"
        android:icon="@drawable/ic_chat_24px" />
    <item
        android:id="@+id/action_report"
        android:title="@string/report"
        android:icon="@drawable/ic_report_black_24dp" />
    <item
        android:id="@+id/action_account"
        android:title="@string/account"
        android:icon="@drawable/ic_person_black_24dp"></item>
</menu>