<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="3dp"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/showImage"
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:contentDescription="@string/show_image"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/showTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/title"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/showDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="inherit"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>